[package]
name = "arceos-hv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# axstarry = { path = "../../ulib/axstarry" }
lazy_init = { path = "../../crates/lazy_init" }
axstd = { path = "../../ulib/axstd", features = ["alloc", "hv", "irq"] }
page_table_entry = { path = "../../crates/page_table_entry",features = ["hv"]}
fdt = {version = "0.1.5"}
arrayvec = { version = "0.7.2", default-features = false }
spin = "0.9"
log = "0.4"


# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "rk3588"
path = "src/bin/rk3588.rs"