[package]
name = "arceos-hv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_init = { path = "../../crates/lazy_init" }
libax = { path = "../../ulib/libax", features = ["alloc", "hv"] }
page_table_entry = { path = "../../crates/page_table_entry" }
fdt = {version = "0.1.5"}
arrayvec = { version = "0.7.2", default-features = false }
spin = "0.9"

[features]

platform-rk3588-aarch64 = []
platform-qemu-virt-aarch64 = []

testos = []
nimbos = []
linux = []

default = ["linux", "platform-qemu-virt-aarch64"]

# default = ["testos", "platform-qemu-virt-aarch64"]
# default = ["platform-qemu-virt-aarch64"]
# default = ["platform-rk3588-aarch64"]
# default = ["platform-rk3588-aarch64", "testos"]