[package]
name = "arm_gicv3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tock-registers = "0.8"
spin = { version = "0.9.4", features = ["use_ticket_mutex"] }

[features]

platform-qemu-virt-aarch64 = []
platform-rk3588-aarch64    = []

default = ["platform-qemu-virt-aarch64"]