[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Runtime library of ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axruntime"
documentation = "https://rcore-os.github.io/arceos/axruntime/index.html"

[features]
default = []

gic_v3  = []

smp = ["axhal/smp"]
irq = ["axhal/irq", "axtask?/irq", "percpu", "kernel_guard"]
tls = ["axhal/tls", "axtask?/tls"]
alloc = ["axalloc"]
paging = ["axhal/paging", "lazy_init"]

multitask = ["axtask/multitask"]
fs = ["axdriver", "axfs"]
net = ["axdriver", "axnet"]
display = ["axdriver", "axdisplay"]
signal = ["axprocess/signal", "axhal/signal"]
img = ["axdriver/img", "paging"]
monolithic = ["axprocess/monolithic", "axhal/monolithic", "axtask/monolithic", "axmem/monolithic"]

hv = ["alloc", "dep:hypercraft", "axhal/hv", "dep:page_table", "page_table_entry/hv", "paging"]

[dependencies]
cfg-if = "1.0"
axhal = { path = "../axhal" }
axlog = { path = "../axlog" }
axconfig = { path = "../axconfig" }
axalloc = { path = "../axalloc", optional = true }
axdriver = { path = "../axdriver", optional = true }
axfs = { path = "../axfs", optional = true }
axnet = { path = "../axnet", optional = true }
axdisplay = { path = "../axdisplay", optional = true }
axtask = { path = "../axtask", optional = true }
axprocess = { path = "../axprocess", optional = true }
axmem = { path = "../axmem", optional = true }
crate_interface = { path = "../../crates/crate_interface" }
percpu = { path = "../../crates/percpu", optional = true }
kernel_guard = { path = "../../crates/kernel_guard", optional = true }
lazy_init = { path = "../../crates/lazy_init", optional = true }
spinlock = { path = "../../crates/spinlock"}

hypercraft = { path = "../../crates/hypercraft", optional = true }
page_table = { path = "../../crates/page_table", optional = true }
page_table_entry = { path = "../../crates/page_table_entry" }
arm_gicv3 = { path = "../../crates/arm_gicv3"}
cortex-a = "8.1.1"
smccc = "0.1.1"
spin = "0.9"


